make it look better
also put things in <body>

--- a/cum.css
+++ b/cum.css
@@ -7,7 +7,7 @@
 #second {
 	float:left; 
 }
-.cumblue {
+.cumblue /* Why is my cum blue? */ {
 	color: #ADD8E6;
 	line-height: 0;
 	text-decoration: none;
